<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFCC"
    tools:context=".barlist.BarListFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bar_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layoutAnimation="@anim/recyclerview_layout_animation"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sort_rating"></androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/btn_sort_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_name"
        android:textSize="10sp"
        app:layout_constraintTop_toBottomOf="@+id/swtch_show_filters"
        tools:layout_editor_absoluteX="4dp" />

    <Button
        android:id="@+id/btn_sort_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/sort_price"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/btn_sort_name"
        app:layout_constraintTop_toTopOf="@+id/btn_sort_name" />

    <Button
        android:id="@+id/btn_sort_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/sort_rating"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/btn_sort_price"
        app:layout_constraintTop_toTopOf="@+id/btn_sort_name" />

    <Button
        android:id="@+id/btn_sort_price_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/sort_price_rating"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/btn_sort_rating"
        app:layout_constraintTop_toTopOf="@+id/btn_sort_name" />

    <Switch
        android:id="@+id/swtch_show_filters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:checked="false"
        android:fontFamily="sans-serif-medium"
        android:minHeight="48dp"
        android:text="@string/show_sort_options"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />
</androidx.constraintlayout.widget.ConstraintLayout>
